--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         persona. Con el cliente en el negocio validar ingresos, gastos, utilidades o rentabilidad del
                         negocio.</strong>
                     <div class="img-container">
-                        <a href="https://leonq2220.github.io/mi-proyecto/contacto.html" class="img" target="_blank">
+                        <a href="https://eggeduardo.github.io/microfinanciera/contacto.html" class="img" target="_blank">
 
                         <img src="boton-solicitar-credito.png"/></a>
                     </div>
