--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-nav">
         <nav class="navbar" role="navigation">
 
-            <a href=index.html class="brand">MIcrofinanciera<img src="ico.ico" width="10%" /></a> 
+            <a href=index.html class="brand">MICROFINANCIERA<img src="ico.ico" width="10%" /></a> 
             
             <ul class="nav-links">
                 <li><a href=index.html>INICIO</a></li>
