--- a/contacto.html
+++ b/contacto.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>TU PRESTAMISTA FAVORITO</title>
+    <title>MI BANCO</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="Abstract Phoenix Luxury Bird Free Logo.png" type="imagen/xicon">
+    <link rel="shortcut icon" href="mi-banco.jpg" type="imagen/xicon">
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +34,7 @@
         <nav class="navbar" role="navigation">
 
             <nav class="navbar" role="navigation">
-                <a href=index.html class="brand">MICROFINANCIERA<img src="ico.ico" width="10%" /></a> 
+                <a href=index.html class="brand">MICROFINANCIERA</a> 
                 <ul class="nav-links">
                     <li><a href=index.html>INICIO</a></li>
                     <li><a href="contacto.html">CONTACTOS</a></li>
