--- a/nosotros.html
+++ b/nosotros.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>TU PRESTAMISTA FAVORITO</title>
+    <title>MI BANCO</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="Abstract Phoenix Luxury Bird Free Logo.png" type="imagen/xicon">
+    <link rel="shortcut icon" href="mi-banco.jpg" type="imagen/xicon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,7 +29,7 @@
 
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href=index.html class="brand">MICROFINANCIERA<img src="ico.ico" width="10%" /></a> 
+            <a href=index.html class="brand">MICROFINANCIERA</a> 
             <ul class="nav-links">
                 <li><a href=index.html>INICIO</a></li>
                 <li><a href="contacto.html">CONTACTOS</a></li>
@@ -43,16 +43,16 @@
     <div class="container">
 
         <h1>Quienes Somos:</h1>
-        <p>Somos una microfinanciera renaciente que promueve la inclusión a través de las
-            microfinanzas y otros productos y servicios financieros. Ponemos al alcance de las personas independientes,
+        <p>Somos una microfinanciera que promueve la inclusión a través de las
+            microfinanzas ponemos al alcance de las personas independientes,
             con pequeñas empresas y que se dedican a alguna actividad productiva; productos prácticos, oportunos e
             innovadores en materia de crédito para negocios, ahorro, inversiones, microseguros y remesas.</p>
             <div class="img-container">
-                <img class="fenix" src="Abstract Phoenix Luxury Bird Free Logo.png">
+                <img class="fenix" src="mi-banco.jpg">
             </div>
 
         <div class="container greeting">
-            <h1>Acercate para mas informacion.</h1>
+           
         </div>
     </div>
     </div>
