--- a/servicios.html
+++ b/servicios.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <title>TU PRESTAMISTA FAVORITO</title>
+    <title>MI BANCO</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="Abstract Phoenix Luxury Bird Free Logo.png" type="imagen/xicon">
+    <link rel="shortcut icon" href="mi-banco.jpg" type="imagen/xicon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
 
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href=index.html class="brand">MICROFINANCIERA<img src="ico.ico" width="10%" /></a> 
+            <a href=index.html class="brand">MICROFINANCIERA</a> 
             <ul class="nav-links">
                 <li><a href=index.html>INICIO</a></li>
                 <li><a href="contacto.html">CONTACTOS</a></li>
@@ -49,14 +49,14 @@
 
         <ul>
 
-            <li><strong>MICROCREDITOS</strong></li>
-            <li><strong>CDT</strong></li>
+            <li><strong>MICROCREDITOS PARA EMPRENDEDORES </strong></li>
+            <li><strong>CDT AHORROS </strong></li>
             <li><strong>CUENTAS DE AHORRO</strong></li>
             <li><strong>MICROSEGUROS</strong></li>
             <li><strong>PAGOS EN LINEAS</strong></li>
             <li><strong>CERTIFICADOS BANCARIOS<strong></li>
             <div class="img-container">
-                <img class="fenix" src="Abstract Phoenix Luxury Bird Free Logo.png">
+                <img class="fenix" src="mi-banco.jpg">
             </div>
             </div>
         </ul>
