--- a/nosotros.html
+++ b/nosotros.html
@@ -29,7 +29,7 @@
 
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href=index.html class="brand">MICROFINANCIERA.</a> 
+            <a href=index.html class="brand">MICROFINANCIERA</a> 
             <ul class="nav-links">
                 <li><a href=index.html>INICIO</a></li>
                 <li><a href="contacto.html">CONTACTOS</a></li>
