--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="center">
                 <h2><strong>Fases del Microcredito:</strong></h2>
-                <p><strong>PROMOCION</strong> Consiste en dar a conocer el producto financiero al cliente, ya sea Un
+                <p><strong>PROMOCION:</strong>Consiste en dar a conocer el producto financiero al cliente, ya sea Un
                     Microcrédito o producto pasivo (Cuentas de ahorro, CDT, etc), en Microcrédito ofrecerle préstamo
                     según la necesidad que presente o que se le puede ayudar para aumento de capital, y si no desea,
                     poderle ofrecer un producto pasivo, en la promoción del producto se puede realizar a través de
@@ -67,11 +67,11 @@
                     referencias y prendas al cliente, para realizar la solicitud de crédito, también el cuanto está
                     solicitando, tiempo, cuota y destino. En la solicitud del cliente es claro resaltar la autorización
                     a consultar centrales de riesgo.</p>
-                <p><strong>Recepción de documentos y garantías::</strong>Consiste en solicitar los documentos necesarios
+                <p><strong>Recepción de documentos y garantías:</strong>Consiste en solicitar los documentos necesarios
                     para adjuntarlos a la solicitud de crédito como soporte Tales como (Fotocopia de la cédula, Recibo
                     publico de donde vive, Si es empleado carta laboral, si es independiente, soportes con facturas, Rut
                     o cámara de comercio.) Firma de prendas de garantías.</p>
-                    <p><strong>Verificación de domicilio y Negocio</strong>Consiste en hacer una referenciación Zonal al domicilio y al negocio. Al domicilio para validar donde vive la persona, hace cuanto vive y tener claridad en caso de visita por Mora presentada en el crédito. Y en el negocio realizar referenciación zonal con los vecinos para saber si conocen al cliente, hace cuanto tiene el negocio y es buena persona. Con el cliente en el negocio validar ingresos, gastos, utilidades o rentabilidad del negocio.</p>
+                    <p><strong>Verificación de domicilio y Negocio:</strong>Consiste en hacer una referenciación Zonal al domicilio y al negocio. Al domicilio para validar donde vive la persona, hace cuanto vive y tener claridad en caso de visita por Mora presentada en el crédito. Y en el negocio realizar referenciación zonal con los vecinos para saber si conocen al cliente, hace cuanto tiene el negocio y es buena persona. Con el cliente en el negocio validar ingresos, gastos, utilidades o rentabilidad del negocio.</p>
 
                 <div style="text-align:justify;">
                     <div class="center">
@@ -84,7 +84,7 @@
                                     cliente, ganar un premio, o simplemente ser reconocido como el mejor.</strong>
 
                             <div class="img-container">
-                                <a href="https://leonq2220.github.io/mi-proyecto/contacto.html" class="img"
+                                <a href="https://microfinanciera.github.io/microfinanciera/contacto.html" class="img"
                                     target="_blank">
 
                                     <img src="boton-solicitar-credito.png" /></a>
