--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="mi-banco.jpg" type="imagen/xicon">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="vieport" content="width=device-width, initial-scale=1.0">
