--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="mi-banco.jpg" type="imagen/xicon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100&display=swap" rel="stylesheet">
 
     
     <meta charset="UTF-8">
@@ -31,7 +31,7 @@
             <i class="fa-brands fa-instagram"></i></a>
         <a href="https://web.whatsapp.com" class="ws" target="_blank">
             <i class="fa-brands fa-square-whatsapp" target="_blank"></i></a>
-        <a href="https://leonq2220.github.io/mi-proyecto/contacto.html" class="buy" target="_blank">
+        <a href="https://microfinanciera.github.io/microfinanciera/contacto.html" class="buy" target="_blank">
             <i class="fa-solid fa-cart-shopping"></i></a>
     </div>
 
