--- a/servicios.html
+++ b/servicios.html
@@ -24,7 +24,7 @@
             <i class="fa-brands fa-instagram"></i></a>
         <a href="https://web.whatsapp.com" class="ws" target="_blank">
             <i class="fa-brands fa-square-whatsapp" target="_blank"></i></a>
-                <a href="https://leonq2220.github.io/mi-proyecto/contacto.html" class="buy" target="_blank">
+                <a href="https://microfinanciera.github.io/microfinanciera/contacto.html" class="buy" target="_blank">
                     <i class="fa-solid fa-cart-shopping"></i></a>
            
     </div>
