--- a/index.html
+++ b/index.html
@@ -670,8 +670,8 @@
                                                                                                                                     memorable
                                                                                                                                     para
                                                                                                                                     el
-                                                                                                                                    cliente
-                                                                                                                                    .</strong>
+                                                                                                                                    cliente.
+                                                                                                                    </strong>
 
                                                                                                                             </p>
 
