--- a/nosotros.html
+++ b/nosotros.html
@@ -19,17 +19,18 @@
     <div class="contenedor">
         <a href="https://facebook.com" class="facebook" target="_blank">
             <i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/microfinanciera_mi_banco/?igshid=NGVhN2U2NjQ0Yg%3D%3D" class="ig" target="_blank">
+        <a href="https://www.instagram.com/microfinanciera_mi_banco/?igshid=NGVhN2U2NjQ0Yg%3D%3D" class="ig"
+            target="_blank">
             <i class="fa-brands fa-instagram"></i></a>
         <a href="https://web.whatsapp.com" class="ws" target="_blank">
             <i class="fa-brands fa-square-whatsapp" target="_blank"></i></a>
-            <a href="https://microfinanciera.github.io/microfinanciera/contacto.html" class="buy" target="_blank">
-                <i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="https://microfinanciera.github.io/microfinanciera/contacto.html" class="buy" target="_blank">
+            <i class="fa-solid fa-cart-shopping"></i></a>
     </div>
 
     <div class="container-nav">
         <nav class="navbar" role="navigation">
-            <a href=index.html class="brand">MICROFINANCIERA</a> 
+            <a href=index.html class="brand">MICROFINANCIERA</a>
             <ul class="nav-links">
                 <li><a href=index.html>INICIO</a></li>
                 <li><a href="contacto.html">CONTACTOS</a></li>
@@ -43,16 +44,17 @@
     <div class="container">
 
         <h1>Quienes Somos:</h1>
-        <p>Somos una microfinanciera que promueve la inclusión a través de las
-            microfinanzas ponemos al alcance de las personas independientes,
-            con pequeñas empresas y que se dedican a alguna actividad productiva; productos prácticos, oportunos e
-            innovadores en materia de crédito para negocios, ahorro, inversiones, microseguros y remesas.</p>
-            <div class="img-container">
-                <img class="fenix" src="mi-banco.jpg">
-            </div>
+        <p>somos una entidad financiera con más de 5 años de experiencia en el mercado colombiano, ofrecemos
+            una amplia gama de productos y servicios financieros para personas, empresas y microempresas con el objetivo
+            de contribuir al desarrollo económico y social del país donde operamos. Nuestro compromiso es brindar
+            soluciones financieras innovadoras, eficientes y accesibles, con un enfoque en la calidad del
+            servicio al cliente.</p>
+        <div class="img-container">
+            <img class="fenix" src="mi-banco.jpg">
+        </div>
 
         <div class="container greeting">
-           
+
         </div>
     </div>
     </div>
